--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,5 +10,6 @@
   <body>
     <div id="root"></div>
     <div id="root_modal_account"></div>
+    <div id="root_modal_alert"></div>
   </body>
 </html>
