--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,3 +1,9 @@
+<!--
+    Luke Kim(@dyobi)
+    If you are interested in this project, Please check out my GitHub repository. (https://github.com/dyobi/WEBPJT_COAXER)
+    Copyright 2022. Luke Kim. All rights reserved.
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
